2020-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/common.h: Add missing unsupported handling for some
	recently added GCC/Clang attributes.

	* magick/: Move all remaining private implementation code in
	public headers which is guarded by MAGICK_IMPLEMENTATION into
	private headers, which are never installed.

2020-02-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Evidence suggests that large
	strip sizes improve performance by reducing the number of I/Os.
	The defaults suggested by libtiff are way to small for today's
	images and computers.  Default TIFF strip sizes so that each
	uncompressed strip consumes up to 1MiB of memory, or 4MiB for FAX
	oriented codecs, or based on LZMA compression level when using
	LZMA compression.  The default size may be adjusted via the
	TIFF_BYTES_PER_STRIP preprocessor definition.

2020-02-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c ZeroFillMissing data will never been triggered when
	y>=image->rows.

2020-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Limit pattern dimensions by
	LONG_MAX rather than ULONG_MAX since this seems more likely to
	avoid arithmetic overflows later on.

2020-02-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Check for exception in image.

2020-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (VersionCommand): Add Google perftools tcmalloc
	to the available feature support.

	* www/INSTALL-unix.rst: Include some information about building
	with MSYS2.

	* coders/png.c (ReadOnePNGImage): Eliminate compilation warnings
	about signed/unsigned comparisons.

	* magick/image.c: Remove private global string constants, and one
	private global unsigned long constant, from the library ABI.
	Since the global constants were declared via a private header and
	only used within the GraphicsMagick build, removing these does not