@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200216"
-#define public MagickPackageReleaseDate "snapshot-20200216"
+#define public MagickPackageVersionAddendum ".020200218"
+#define public MagickPackageReleaseDate "snapshot-20200218"
