@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x232002
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 23,20,2
-#define MagickChangeDate   "20200216"
-#define MagickReleaseDate  "snapshot-20200216"
+#define MagickChangeDate   "20200218"
+#define MagickReleaseDate  "snapshot-20200218"
 
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
